# CountdownMailer

./: Cargo.toml  Dockerfile  compose.yaml
src/: constants.rs  email.rs  main.rs
templates/: email_base.html  email_completed.html  email_countdown.html
