[package]
name = "countdown_mailer"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"

[dependencies]
anyhow = { version = "1.0", default-features = false }
askama = { version = "0.15", default-features = false, features = ["config", "derive", "std"] }
chrono = "0.4"
dotenvy = "0.15"
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "tokio1-native-tls"] }
